tests/negative/regression/r22.orng
// r22.orng:6:20: error: comptime cannot be type `Void`
//     const ident = { return }
//                   ^
// 
fn main() -> Int { 
    const ident = { return }
} 
